# pulzr

./: .gitignore  Cargo.toml  README.md  codecov.yml  install.sh  tarpaulin.toml
.github/workflows/: ci.yml  release.yml
assets/: index.html
dashboards/: README.md  pulzr-detailed.json  pulzr-overview.json
examples/: api_endpoints.json  simple.json  simple.yaml
src/: cli.rs  lib.rs  main.rs
src/auth/: mod.rs
src/config/: memory.rs
src/core/: client.rs  load_tester.rs  mod.rs  rate_limiter.rs  scenario.rs
src/distributed/: coordinator.rs  distributed_client.rs  load_balancer.rs  mod.rs  worker.rs
src/integrations/: grafana.rs  mod.rs  prometheus.rs  prometheus_server.rs  websocket.rs
src/metrics/: distributed_stats.rs  export.rs  memory_stats.rs  mod.rs  stats.rs
src/network/: endpoints.rs  http2.rs  mod.rs  ramp_up.rs  tls.rs  user_agent.rs
src/ui/: mod.rs  tui.rs
src/ui/webui/: server.rs
src/utils/: debug.rs  memory_info.rs  mod.rs  port_utils.rs
tests/: lib.rs
tests/common/: mod.rs
tests/integration/: cli_tests.rs  distributed_tests.rs  mod.rs  websocket_tests.rs  webui_tests.rs
